--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -52,7 +52,7 @@
                                 </svg>
                                 Sign In
                             </a>
-                            <a href="">
+                            <a href="{% url 'accounts:sign-up' %}">
                                 <svg viewBox="0 0 24 24">
                                     <path d="M13,17L14.4,15.6L11.8,13H20V11H11.8L14.4,8.4L13,7L8,12L13,17Z M4,5H12V3H4C2.9,3 2,3.9 2,5V19C0,20.1 2.9,21 4,21H12V19H4V5Z" />
                                 </svg>
@@ -109,7 +109,7 @@
                             </svg>
                             Sign In
                         </a>
-                        <a href="" class="mobile-auth-btn signup">
+                        <a href="{% url 'accounts:sign-up' %}" class="mobile-auth-btn signup">
                             <svg viewBox="0 0 24 24">
                                 <path d="M13,17L14.4,15.6L11.8,13H20V11H11.8L14.4,8.4L13,7L8,12L13,17Z M4,5H12V3H4C2.9,3 2,3.9 2,5V19C0,20.1 2.9,21 4,21H12V19H4V5Z" />
                             </svg>
