--- a/src/templates/emails/password_reset_email.html
+++ b/src/templates/emails/password_reset_email.html
@@ -9,22 +9,22 @@
                                 <tr>
                                     <td style="text-align:left;padding:24px 30px 0;background-color:#ffffff">
                                         <a style="text-decoration:none;color:#444444" target="_blank">
-                                            <div style="margin-right:auto;font-weight:normal;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;color:#444444;font-size:22px">Welcome to PhotoHub, {{ user.username }} !</div>
+                                            <div style="margin-right:auto;font-weight:normal;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;color:#444444;font-size:22px">Password Reset for PhotoHub, {{ user.username }} !</div>
                                         </a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td style="text-align:left;padding:11px 30px 0;background-color:#ffffff">
                                         <div style="margin-right:auto;font-weight:normal;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;color:#707070;font-size:16px">
-                                            Thank you for joining PhotoHub! To get started and secure your account, please confirm your email address by clicking the button below.<br><br>
+                                            You requested to reset your password for your PhotoHub account. Click the button below to set a new password.<br><br>
                                             <a style="display:inline-block;text-decoration:none;padding:15px 30px;font-size:15px;text-align:center;font-weight:bold;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;width:auto;color:#000;border:2px solid #000;background-color:#fff;border-radius:3px;transition:all 0.3s ease;"
-                                                href="http://{{ domain }}{% url 'accounts:activate' uidb64=uid token=token %}"
+                                                href="http://{{ domain }}{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}"
                                                 target="_blank"
                                                 onmouseover="this.style.backgroundColor='#000';this.style.color='#fff';"
                                                 onmouseout="this.style.backgroundColor='#fff';this.style.color='#000';">
-                                                <span class="il">Confirm</span> email
+                                                <span class="il">Reset</span> password
                                             </a><br><br>
-                                            <strong>Your Email:</strong> <br><a target="_blank">{{ user.email }}</a><br><br>Please save this email so that you can refer to it later.<br><br>
+                                            <strong>Your Email:</strong> <br><a target="_blank">{{ user.email }}</a><br><br>If you didn't request a password reset, please ignore this email. This link will expire in 24 hours.<br><br>
                                         </div>
                                     </td>
                                 </tr>
