--- a/src/templates/accounts/sign-in.html
+++ b/src/templates/accounts/sign-in.html
@@ -1,7 +1,7 @@
 {% extends 'partials/base.html' %}
 {% load static %}
 
-{% block title %}Sign In - PhotoHub{% endblock %}
+{% block title %} {{title}} {% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/accounts/auth.css' %}">
